--- a/calculator.html
+++ b/calculator.html
@@ -11,6 +11,9 @@ function seno() {
 function cuarta() {
  var num = document.getElementById("n1");
  num.value = Math.pow(num.value, 4);
+function cuadrado() {
+ var num = document.getElementById("n1");
+ num.value = Math.pow(num.value, 2);
 }
 </script>
 </head>
@@ -23,5 +26,7 @@ function cuarta() {
  <button onclick="seno()"> sen </button>
  <button onclick="cuarta()"> x^4 </button> 
 </p>
+ <button onclick="cuadrado()"> x^2 </button>
+ </p>
 </body>
 </html>
